[package]
name = "fin_db"
version = "0.2.0"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
ruc = "1.0"
storage = { path = "../storage", version = "0.2" }

# fmerk = { git = "https://github.com/FindoraNetwork/fmerk.git", tag = "v2.1.1"}
fmerk = { git = "https://github.com/ktmlm/fmerk", branch = "master"}

[features]
iterator = ["storage/iterator"]
